compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/topLevelDifferentFiles.kt
// FILE: a.kt

<!CONFLICTING_JVM_DECLARATIONS!>val x<!> = 1

// FILE: b.kt

<!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1